# mpc-competition

./: README.md  leaderboard.json  pyproject.toml
evaluator/: evaluate_all.py
submissions/: MeepMorpZeep.py  aadith.py  baseline.py  himaneesh.py
